Fix top menu on mobile devices

--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -21,7 +21,8 @@
   text-transform: uppercase;
   font-weight: 700;
   font-family: $asap-fonts;
-  height: 85px;
+  // margin-bottom: 20px;
+  // height: 85px;
 
   .navbar-nav {
     margin-top: 15px;
